<resources>
    <string name="app_name">SmartArdnino</string>
    <string name="local_page_title">本地</string>
    <string name="remote_page_title">远程</string>
    <string name="start_scan">扫描设备</string>
    <string name="stop_scan">停止扫描</string>
    <string name="shut_bt">关闭蓝牙</string>
    <string name="current_connected_devices">当前已连接设备：</string>
    <string name="pair_devices">已配对设备:</string>
    <string name="available_devices">可用设备:</string>
</resources>
